# chain-fusion-mcp-server

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  TODOS.md  dfx.json  icp.yaml  package-lock.json  package.json  tsconfig.json
canister/: Cargo.toml  README.md  chain-fusion-mcp.did
canister/src/: lib.rs
src/: cache.ts  config.ts  cycles-budget.ts  errors.ts  identity.ts  index.ts  server.ts  transfer-log.ts  withdrawal-log.ts
src/tools/: bitcoin.ts  ckbtc-minter.ts  cktokens.ts  ethereum.ts
test/: bitcoin.test.ts  ckbtc-minter.test.ts  cktokens.test.ts  config.test.ts  cycles-budget.test.ts  errors.test.ts  ethereum.test.ts  identity.test.ts  transfer-log.test.ts
